update jpeg format

--- a/src/pages/guidelines/color/overview.mdx
+++ b/src/pages/guidelines/color/overview.mdx
@@ -46,7 +46,7 @@ library in the context of dark and light themes.
 <GifPlayer color="dark">
 
 ![6 screenshots showing a range of color schemes and considerations for text and data visualizations](images/introduction.gif)
-![UI color alternatives](images/introduction.jpg)
+![UI color alternatives](images/introduction.jpeg)
 
 </GifPlayer>
 
