--- a/src/pages/components/popover/usage.mdx
+++ b/src/pages/components/popover/usage.mdx
@@ -80,8 +80,8 @@ triggered from.
 </Column>
 </Row>
 
-1. **Trigger button:** An interactive element that triggers the popover to open
-   on click, hover, or focus.
+1. **UI trigger button:** An interactive element that triggers the popover to
+   open on click, hover, or focus.
 2. **Tip:** An indicator that is added to a popover container to help show the
    relationship between the popover and where it was triggered from.
 3. **Content area:** An area to place text and interactive elements.
@@ -156,15 +156,16 @@ For further content guidance, see Carbon's
 
 ## No tip
 
-Popovers without a tip are typically used when the trigger button has a visually
-defined down state.
+Popovers without a tip can be used for a wide variety of different usecases. No
+tip popovers are typically used when the trigger button has a visually defined
+down state.
 
 ### Placement
 
 Upon opening, popover directions are set to `auto` by default and can detect
-browser edges so they can be properly placed in view without cutoff. Popovers
-can also specify distinct directions. Direction options vary depending on the
-popover variant.
+browser edges to properly place themselves in view without cutoff.
+Alternatively, popovers can also specify distinct directions. Direction options
+vary depending on the popover variant.
 
 When a popover does not have a tip, the trigger button should be flush to the
 side of the popover and can open at the top, bottom, left, or right directions.
@@ -243,7 +244,7 @@ directions.
 
 ### Alignment
 
-Similarly like no tip popovers, a trigger button paired with a caret tip popover
+Similarly with no tip popovers, a trigger button paired with a caret tip popover
 should be placed 4px away from the popover container.
 
 <Row>
@@ -269,8 +270,8 @@ should be placed 4px away from the popover container.
 
 ## Tab tip
 
-Popovers can have a tab tips when the popover is connected to a toolbar or
-header area.
+Popovers can have a tab tip when the popover is connected to a toolbar or header
+area where the trigger button sits within.
 
 ### Placement
 
