update: placement and alignment sections

--- a/src/pages/components/popover/usage.mdx
+++ b/src/pages/components/popover/usage.mdx
@@ -162,13 +162,14 @@ down state.
 
 ### Placement
 
-Upon opening, popover directions are set to `auto` by default and can detect
-browser edges to properly place themselves in view without cutoff.
-Alternatively, popovers can also specify distinct directions. Direction options
-vary depending on the popover variant.
+Popover directions by default are set to auto. Upon opening, popovers can detect
+the edges of the browser to properly be placed in view so the container does not
+get cutoff. Alternatively, popovers can also specify distinct directions.
+Direction options vary depending on the popover variant.
 
 When a popover does not have a tip, the trigger button should be flush to the
-side of the popover and can open at the top, bottom, left, or right directions.
+side of the popover. The popover can open from the **left**, **right**,
+**bottom**, or **top** of the trigger button.
 
 <Row>
 <Column colLg={8}>
@@ -222,9 +223,14 @@ buttons.
 
 ### Placement
 
+The popover can open from the left, right, bottom, or top of the trigger button.
 When using a caret tip, the trigger button and caret tip should be vertically
-center with eachother and can open at the top, bottom, center, left, or right
-directions.
+center with eachother.
+
+### Alignment
+
+The container of the popover may be aligned to start, center, or end to keep the
+container from bleeding off the page or covering important information.
 
 <Row>
 <Column colLg={8}>
@@ -241,8 +247,6 @@ directions.
 
 </Column>
 </Row>
-
-### Alignment
 
 Similarly with no tip popovers, a trigger button paired with a caret tip popover
 should be placed 4px away from the popover container.
