--- a/src/pages/components/popover/usage.mdx
+++ b/src/pages/components/popover/usage.mdx
@@ -15,11 +15,9 @@ A popover is a layer that pops up over all other elements on a page.
 
 <AnchorLink>Overview</AnchorLink>
 <AnchorLink>Live demo</AnchorLink>
+<AnchorLink>Variants</AnchorLink>
 <AnchorLink>Formatting</AnchorLink>
 <AnchorLink>Content</AnchorLink>
-<AnchorLink>No tip</AnchorLink>
-<AnchorLink>Caret tip</AnchorLink>
-<AnchorLink>Tab tip</AnchorLink>
 <AnchorLink>Behaviors</AnchorLink>
 <AnchorLink>Modifiers</AnchorLink>
 <AnchorLink>Related</AnchorLink>
@@ -45,7 +43,9 @@ tooltips, overflow menus, and dropdown menus.
 - Use when you need to display additional details for specific elements on a
   page. If your popover exceeds four columns in width, use a modal instead.
 
-### Popover variants
+## Live demo
+
+## Variants
 
 By default, a popovers structure is made up of a container with no additional
 tip. Depending on the usecase, caret tips or tab tips can be added to the
@@ -65,8 +65,6 @@ triggered from.
 
 </Column>
 </Row>
-
-## Live demo
 
 ## Formatting
 
@@ -106,7 +104,7 @@ four columns.
 <DoDontRow>
   <DoDont caption="Do keep the width size of a popover within four columns.">
 
-![Do keep the width size of a popover within four columns.](popover-usage-4-do.png)
+![Do keep the width size of a popover within four columns.](images/popover-usage-4-do.png)
 
   </DoDont>
   <DoDont type="dont" caption="Don't exceed a popover width size of four columns.">
@@ -204,7 +202,7 @@ what size button is being used.
 <DoDontRow>
   <DoDont caption="Do flush align the popover edge with the trigger button.">
 
-![Do flush align the popover edge with the trigger button.](popover-usage-10-do.png)
+![Do flush align the popover edge with the trigger button.](images/popover-usage-10-do.png)
 
   </DoDont>
   <DoDont type="dont" caption="Don't arbitrarily place the popover near the trigger button.">
@@ -262,7 +260,7 @@ should be placed 4px away from the popover container.
 <DoDontRow>
   <DoDont caption="Do align the caret tip center with the trigger button.">
 
-![Do align the caret tip center with the trigger button.](popover-usage-14-do.png)
+![Do align the caret tip center with the trigger button.](images/popover-usage-14-do.png)
 
   </DoDont>
   <DoDont type="dont" caption="Don't misalign the caret tip with the trigger button.">
@@ -307,7 +305,7 @@ container because they are connected to eachother.
 <DoDontRow>
   <DoDont caption="Do top align the tab tip with the layer behind it to keep clean lines between the popover and the layer underneath.">
 
-![Do top align the tab tip with the layer behind it to keep clean lines between the popover and the layer underneath.](popover-usage-17-do.png)
+![Do top align the tab tip with the layer behind it to keep clean lines between the popover and the layer underneath.](images/popover-usage-17-do.png)
 
   </DoDont>
   <DoDont type="dont" caption="Don't misalign the tab tip with the layer behind it to avoid creating jagged lines between the popover and the layer underneath.">
@@ -401,25 +399,25 @@ the layer underneath.
 
 ## Related
 
-**Popover and form components**
+**Form components**
 
 Form components that have menus, like dropdowns, selects and date pickers, use
 popovers as a base layer.
 
-**Popover and Disclosures**
+**Disclosures**
 
-Disclosures use popovers as a base layer. Disclosures are comprised of a popover
-container, text, and interactive elements. For further guidance, see Carbon's
-[disclosure pattern].
+Disclosures use popovers as a base layer, and then build off of that layer to
+include varying text, and interactive elements for a wide variety of usecases.
+For further guidance, see Carbon's [disclosure pattern].
 
-**Popover and Overflow menus**
+**Overflow menus**
 
 Overflow menus use popovers as a base layer. When the overflow menu icon button
 is triggered, the menu opens and uses a tab tip popover as its base. For further
 guidance, see Carbon's
 [overflow menu](<[https://www.carbondesignsystem.com/components/overflow-menu/usage/](https://www.carbondesignsystem.com/components/overflow-menu/usage/)>).
 
-**Popover and Tooltips**
+**Tooltips**
 
 Tooltips use popovers as a base layer. Tooltips are comprised of a popover
 container and text. For further guidance, see Carbon's
