--- a/src/pages/components/popover/usage.mdx
+++ b/src/pages/components/popover/usage.mdx
@@ -319,7 +319,7 @@ container because they are connected to eachother.
 
 ### Interactions
 
-**Mouse**
+#### Mouse
 
 Users trigger a popover to open by clicking the trigger button. Users can close
 the popover by clicking again on the trigger button or anywhere outside of the
@@ -333,14 +333,14 @@ open popover container.
 </Column>
 </Row>
 
-**Keyboard**
+#### Keyboard
 
 When the popover control has focus:
 
 - `Enter` and `Space` activates the popover control and toggles the visibility
   of the popover content.
 
-**Screen readers**
+#### Screen readers
 
 VoiceOver: Users can trigger a button to open a popover by pressing `Enter` or
 `Space` while the button has focus.
@@ -353,7 +353,7 @@ NVDA: Users can trigger a button to open a popover by pressing `Enter` or
 
 ## Modifiers
 
-**Containers**
+#### Containers
 
 There are three different container variants of a popover—no tip, caret tip, and
 tab tip. The default popover has no tip. No tip popovers are typically used when
@@ -369,7 +369,7 @@ Tab tips are specifically used in headers and toolbars.
 </Column>
 </Row>
 
-**Colors**
+#### Colors
 
 Popovers come in three different container colors—`$layer-01`, `$layer-02`, and
 `$background-inverse`.
@@ -382,7 +382,7 @@ Popovers come in three different container colors—`$layer-01`, `$layer-02`, an
 </Column>
 </Row>
 
-**Corners**
+#### Corners
 
 A popover container has rounded corners by default and the corner radius is set
 to 2px. Use straight corners when the popover structure contains a tab tip and
@@ -399,25 +399,25 @@ the layer underneath.
 
 ## Related
 
-**Form components**
+#### Form components
 
 Form components that have menus, like dropdowns, selects and date pickers, use
 popovers as a base layer.
 
-**Disclosures**
+#### Disclosures
 
 Disclosures use popovers as a base layer, and then build off of that layer to
 include varying text, and interactive elements for a wide variety of usecases.
 For further guidance, see Carbon's [disclosure pattern].
 
-**Overflow menus**
+#### Overflow menus
 
 Overflow menus use popovers as a base layer. When the overflow menu icon button
 is triggered, the menu opens and uses a tab tip popover as its base. For further
 guidance, see Carbon's
 [overflow menu](<[https://www.carbondesignsystem.com/components/overflow-menu/usage/](https://www.carbondesignsystem.com/components/overflow-menu/usage/)>).
 
-**Tooltips**
+#### Tooltips
 
 Tooltips use popovers as a base layer. Tooltips are comprised of a popover
 container and text. For further guidance, see Carbon's
