--- a/src/pages/whats-happening/meetups/index.mdx
+++ b/src/pages/whats-happening/meetups/index.mdx
@@ -36,12 +36,14 @@ Verify that you’re working with the grid correctly, that you’re using the ri
 components, that you’re using the correct language. Sign up to share, or come
 along to see other work in progress and learn that way.
 
-<Button
-  kind="tertiary"
-  renderIcon={ArrowRight16}
-  href="https://ec.yourlearning.ibm.com/w3/series/10163237">
-  Subscribe
-</Button>
+<Row>
+  <Button
+    kind="tertiary"
+    renderIcon={ArrowRight16}
+    href="https://ec.yourlearning.ibm.com/w3/series/10163237">
+    Subscribe
+  </Button>
+</Row>
 
 </Column>
 </Row>
@@ -63,12 +65,14 @@ These weekly playback calls are a chance for us to have dataviz stakeholders
 present, discuss design explorations, gather feedback and business unit
 requirements, and determine next steps on requested components or functionality.
 
-<Button
-  kind="tertiary"
-  renderIcon={ArrowRight16}
-  onClick={() => (window.location.href = 'mailto:iliadm@ca.ibm.com')}>
-  Email us
-</Button>
+<Row>
+  <Button
+    kind="tertiary"
+    renderIcon={ArrowRight16}
+    onClick={() => (window.location.href = 'mailto:iliadm@ca.ibm.com')}>
+    Email us
+  </Button>
+</Row>
 
 </Column>
 </Row>
@@ -90,12 +94,14 @@ discuss best practices, identify areas of reuse, and bring up things the Carbon
 team can do to make their jobs easier. This group helps out with Carbon's
 release cycles to detect breaking changes.
 
-<Button
-  kind="tertiary"
-  renderIcon={ArrowRight16}
-  onClick={() => (window.location.href = 'mailto:carbon@us.ibm.com')}>
-  Email us
-</Button>
+<Row>
+  <Button
+    kind="tertiary"
+    renderIcon={ArrowRight16}
+    onClick={() => (window.location.href = 'mailto:carbon@us.ibm.com')}>
+    Email us
+  </Button>
+</Row>
 
 </Column>
 </Row>
@@ -117,12 +123,14 @@ page designs with the Carbon designers. Great for assessing the overall flow,
 page layouts, the best choices and use of components, content—everything from
 the big picture to the smallest detail! Usually two or more hours.
 
-<Button
-  kind="tertiary"
-  renderIcon={ArrowRight16}
-  onClick={() => (window.location.href = 'mailto:carbon@us.ibm.com')}>
-  Email us
-</Button>
+<Row>
+  <Button
+    kind="tertiary"
+    renderIcon={ArrowRight16}
+    onClick={() => (window.location.href = 'mailto:carbon@us.ibm.com')}>
+    Email us
+  </Button>
+</Row>
 
 </Column>
 </Row>
