feat(homepage): add beta blog

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -131,6 +131,20 @@ building websites and user interfaces.
 
 <ArticleCard
     color="dark"
+    title="Carbon v11 Beta 1"
+    author="Josh Black"
+    date="August 6, 2021"
+    href="https://medium.com/carbondesign/carbon-v11-beta-1-33488b0280f0"
+    >
+
+![Carbon v11 Beta 1](./homepage/images/carbon_2021-august-update.png)
+
+</ArticleCard>
+</Column>
+<Column colLg={4} colMd={4} noGutterMdLeft>
+
+<ArticleCard
+    color="dark"
     title="Carbon’s 2021 release: April update"
     author="Josh Black"
     date="April 22, 2021"
@@ -151,19 +165,6 @@ building websites and user interfaces.
     >
 
 ![Gatsby theme announcement](./homepage/images/gatsby_announcement.png)
-
-</ArticleCard>
-</Column>
-<Column colLg={4} colMd={4} noGutterMdLeft>
-<ArticleCard
-    color="dark"
-    title="What’s coming to Carbon in 2021"
-    author="Josh Black"
-    date="November 12, 2020"
-    href="https://medium.com/carbondesign/whats-coming-to-carbon-in-2021-39a4c7d1762a"
-    >
-
-![Carbon 2021 release](./homepage/images/carbon_2021.png)
 
 </ArticleCard>
 </Column>
