--- a/src/pages/guidelines/typography/type-sets.mdx
+++ b/src/pages/guidelines/typography/type-sets.mdx
@@ -29,21 +29,22 @@ available within the one [Sketch kit](/designing/design-kits/).
 <AnchorLinks>
 
 <AnchorLink>Overview</AnchorLink>
-<AnchorLink>Small styles</AnchorLink>
+<AnchorLink>Utility styles</AnchorLink>
 <AnchorLink>Body styles</AnchorLink>
 <AnchorLink>Fixed heading styles</AnchorLink>
 <AnchorLink>Fluid heading styles</AnchorLink>
-<AnchorLink>Fluid callout and display styles</AnchorLink>
+<AnchorLink>Fluid display styles</AnchorLink>
 <AnchorLink>Questions</AnchorLink>
 
 </AnchorLinks>
 
 ## Overview
 
-Carbon uses type tokens to manage our typography, and these tokens sit within
-two type sets. The productive and expressive type sets support designers
-creating for a full range of user needs and activities across product and web
-pages.
+Carbon uses type tokens to manage typography, and these tokens sit within two
+type sets. The productive and expressive type sets support designers creating
+for a full range of user needs and activities across product and web pages. To
+understand when to use styles from each set, see
+[Type usage](/guidelines/typography/type-usage).
 
 #### Base type sizes
 
@@ -73,12 +74,12 @@ nature of the pages.
   size at different breakpoints, and can extrapolate/stretch in between sizes
   for smooth transitions.
 
-## Small styles
+## Utility styles
 
-The small styles are for use with productive and expressive moments and include
-styles for code snippets, labels for captions and helper text, as well as legal
-copy. Productive styles have a suffix of `-01` and expressive styles have a
-suffix of `-02`.
+The utility styles are for use with productive and expressive moments and
+include styles for code snippets, labels for captions and helper text, as well
+as legal copy. Productive styles have a suffix of `-01` and expressive styles
+have a suffix of `-02`.
 
 <TypesetStyle typesets="smallStyle" />
 
@@ -108,15 +109,17 @@ styles change size at different breakpoints.
 
 Do not use these styles inside a container. They may be used in product pages
 where text sits outside of a container, and a blend of expressive and productive
-type styles is desired for hierarchy and distinction.
+type styles is desired for hierarchy and distinction. For more information, see
+[Type usage](/guidelines/typography/type-usage).
 
 <TypesetStyle typesets="fluidHeadings" breakpointControls={true} />
 
-## Fluid callout and display styles
+## Fluid display styles
 
 The callout and display styles are part of the expressive set and being fluid,
 they will adjust at different breakpoints. Do not use these styles inside a
-container.
+container. For guidance about using display styles, see
+[Type usage](/guidelines/typography/type-usage#expressive-use-cases/).
 
 <TypesetStyle typesets="fluidCallouts,fluidDisplay" breakpointControls={true} />
 
