update type token names

--- a/src/pages/guidelines/typography/type-usage.mdx
+++ b/src/pages/guidelines/typography/type-usage.mdx
@@ -77,8 +77,8 @@ To create productive moments, use the body styles and supporting styles with the
 
 To ensure consistent line heights, use the following pairings:
 
-- pair `body-short-01` with the `heading-short-01`
-- pair `body-long-01` with the `heading-long-01`
+- pair `body-compact-01` with the `heading-compact-01`
+- pair `body-01` with the `heading-01`
 
 Productive headings are fixed.
 
@@ -110,8 +110,8 @@ will adjust with different breakpoints.
 For the fixed headings, ensure consistent line heights by using the following
 pairings:
 
-- pair `body-short-02` with the `heading-short-02`
-- pair `body-long-02` with the `heading-long-02`
+- pair `body-compact-02` with the `heading-compact-02`
+- pair `body-02` with the `heading-02`
 
 As well as these two fixed headings, there is a set of fluid headings that add a
 series of scales and fluid behavior.
