--- a/src/pages/guidelines/typography/type-sets.mdx
+++ b/src/pages/guidelines/typography/type-sets.mdx
@@ -1,7 +1,7 @@
 ---
 label:
-  Carbon uses type tokens to manage our typography, and these tokens sit within
-  two type sets.
+  Carbon uses type tokens to manage typography, and these tokens sit within two
+  type sets.
 title: Typography
 description:
   The productive and expressive type sets support designers creating for a full
@@ -13,8 +13,8 @@ import TypesetStyle from 'components/TypesetStyle';
 
 <PageDescription>
 
-Carbon uses type tokens to manage our typography, and these tokens sit within
-two type sets: expressive and productive.
+Carbon uses type tokens to manage typography, and these tokens sit within two
+type sets: expressive and productive.
 
 </PageDescription>
 
@@ -69,7 +69,7 @@ nature of the pages.
   these situations fixed type styles are a must.
 
 - The expressive type set has two fixed headings, for use where smaller headings
-  are needed. The remainding headings are _fluid_. Web pages need to be able to
+  are needed. The remaining headings are _fluid_. Web pages need to be able to
   flex and work at different breakpoints, and the fluid heading styles change
   size at different breakpoints, and can extrapolate/stretch in between sizes
   for smooth transitions.
